libqt6c/src/libqframe.hpp

#pragma once
#ifndef SRCC_LIBQFRAME_HPP
#define SRCC_LIBQFRAME_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFrame QFrame;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QFrame* QFrame_new(QWidget* parent);
QFrame* QFrame_new2();
QFrame* QFrame_new3(QWidget* parent, int f);
QMetaObject* QFrame_MetaObject(const QFrame* self);
void* QFrame_Metacast(QFrame* self, const char* param1);
int QFrame_Metacall(QFrame* self, int param1, int param2, void** param3);
int QFrame_FrameStyle(const QFrame* self);
void QFrame_SetFrameStyle(QFrame* self, int frameStyle);
int QFrame_FrameWidth(const QFrame* self);
QSize* QFrame_SizeHint(const QFrame* self);
int QFrame_FrameShape(const QFrame* self);
void QFrame_SetFrameShape(QFrame* self, int frameShape);
int QFrame_FrameShadow(const QFrame* self);
void QFrame_SetFrameShadow(QFrame* self, int frameShadow);
int QFrame_LineWidth(const QFrame* self);
void QFrame_SetLineWidth(QFrame* self, int lineWidth);
int QFrame_MidLineWidth(const QFrame* self);
void QFrame_SetMidLineWidth(QFrame* self, int midLineWidth);
QRect* QFrame_FrameRect(const QFrame* self);
void QFrame_SetFrameRect(QFrame* self, const QRect* frameRect);
bool QFrame_Event(QFrame* self, QEvent* e);
void QFrame_PaintEvent(QFrame* self, QPaintEvent* param1);
void QFrame_ChangeEvent(QFrame* self, QEvent* param1);
void QFrame_InitStyleOption(const QFrame* self, QStyleOptionFrame* option);
void QFrame_OnMetaObject(const QFrame* self, intptr_t slot);
QMetaObject* QFrame_SuperMetaObject(const QFrame* self);
void QFrame_OnMetacast(QFrame* self, intptr_t slot);
void* QFrame_SuperMetacast(QFrame* self, const char* param1);
void QFrame_OnMetacall(QFrame* self, intptr_t slot);
int QFrame_SuperMetacall(QFrame* self, int param1, int param2, void** param3);
void QFrame_OnSizeHint(const QFrame* self, intptr_t slot);
QSize* QFrame_SuperSizeHint(const QFrame* self);
void QFrame_OnEvent(QFrame* self, intptr_t slot);
bool QFrame_SuperEvent(QFrame* self, QEvent* e);
void QFrame_OnPaintEvent(QFrame* self, intptr_t slot);
void QFrame_SuperPaintEvent(QFrame* self, QPaintEvent* param1);
void QFrame_OnChangeEvent(QFrame* self, intptr_t slot);
void QFrame_SuperChangeEvent(QFrame* self, QEvent* param1);
void QFrame_OnInitStyleOption(const QFrame* self, intptr_t slot);
void QFrame_SuperInitStyleOption(const QFrame* self, QStyleOptionFrame* option);
int QFrame_DevType(const QFrame* self);
void QFrame_OnDevType(const QFrame* self, intptr_t slot);
int QFrame_SuperDevType(const QFrame* self);
void QFrame_SetVisible(QFrame* self, bool visible);
void QFrame_OnSetVisible(QFrame* self, intptr_t slot);
void QFrame_SuperSetVisible(QFrame* self, bool visible);
QSize* QFrame_MinimumSizeHint(const QFrame* self);
void QFrame_OnMinimumSizeHint(const QFrame* self, intptr_t slot);
QSize* QFrame_SuperMinimumSizeHint(const QFrame* self);
int QFrame_HeightForWidth(const QFrame* self, int param1);
void QFrame_OnHeightForWidth(const QFrame* self, intptr_t slot);
int QFrame_SuperHeightForWidth(const QFrame* self, int param1);
bool QFrame_HasHeightForWidth(const QFrame* self);
void QFrame_OnHasHeightForWidth(const QFrame* self, intptr_t slot);
bool QFrame_SuperHasHeightForWidth(const QFrame* self);
QPaintEngine* QFrame_PaintEngine(const QFrame* self);
void QFrame_OnPaintEngine(const QFrame* self, intptr_t slot);
QPaintEngine* QFrame_SuperPaintEngine(const QFrame* self);
void QFrame_MousePressEvent(QFrame* self, QMouseEvent* event);
void QFrame_OnMousePressEvent(QFrame* self, intptr_t slot);
void QFrame_SuperMousePressEvent(QFrame* self, QMouseEvent* event);
void QFrame_MouseReleaseEvent(QFrame* self, QMouseEvent* event);
void QFrame_OnMouseReleaseEvent(QFrame* self, intptr_t slot);
void QFrame_SuperMouseReleaseEvent(QFrame* self, QMouseEvent* event);
void QFrame_MouseDoubleClickEvent(QFrame* self, QMouseEvent* event);
void QFrame_OnMouseDoubleClickEvent(QFrame* self, intptr_t slot);
void QFrame_SuperMouseDoubleClickEvent(QFrame* self, QMouseEvent* event);
void QFrame_MouseMoveEvent(QFrame* self, QMouseEvent* event);
void QFrame_OnMouseMoveEvent(QFrame* self, intptr_t slot);
void QFrame_SuperMouseMoveEvent(QFrame* self, QMouseEvent* event);
void QFrame_WheelEvent(QFrame* self, QWheelEvent* event);
void QFrame_OnWheelEvent(QFrame* self, intptr_t slot);
void QFrame_SuperWheelEvent(QFrame* self, QWheelEvent* event);
void QFrame_KeyPressEvent(QFrame* self, QKeyEvent* event);
void QFrame_OnKeyPressEvent(QFrame* self, intptr_t slot);
void QFrame_SuperKeyPressEvent(QFrame* self, QKeyEvent* event);
void QFrame_KeyReleaseEvent(QFrame* self, QKeyEvent* event);
void QFrame_OnKeyReleaseEvent(QFrame* self, intptr_t slot);
void QFrame_SuperKeyReleaseEvent(QFrame* self, QKeyEvent* event);
void QFrame_FocusInEvent(QFrame* self, QFocusEvent* event);
void QFrame_OnFocusInEvent(QFrame* self, intptr_t slot);
void QFrame_SuperFocusInEvent(QFrame* self, QFocusEvent* event);
void QFrame_FocusOutEvent(QFrame* self, QFocusEvent* event);
void QFrame_OnFocusOutEvent(QFrame* self, intptr_t slot);
void QFrame_SuperFocusOutEvent(QFrame* self, QFocusEvent* event);
void QFrame_EnterEvent(QFrame* self, QEnterEvent* event);
void QFrame_OnEnterEvent(QFrame* self, intptr_t slot);
void QFrame_SuperEnterEvent(QFrame* self, QEnterEvent* event);
void QFrame_LeaveEvent(QFrame* self, QEvent* event);
void QFrame_OnLeaveEvent(QFrame* self, intptr_t slot);
void QFrame_SuperLeaveEvent(QFrame* self, QEvent* event);
void QFrame_MoveEvent(QFrame* self, QMoveEvent* event);
void QFrame_OnMoveEvent(QFrame* self, intptr_t slot);
void QFrame_SuperMoveEvent(QFrame* self, QMoveEvent* event);
void QFrame_ResizeEvent(QFrame* self, QResizeEvent* event);
void QFrame_OnResizeEvent(QFrame* self, intptr_t slot);
void QFrame_SuperResizeEvent(QFrame* self, QResizeEvent* event);
void QFrame_CloseEvent(QFrame* self, QCloseEvent* event);
void QFrame_OnCloseEvent(QFrame* self, intptr_t slot);
void QFrame_SuperCloseEvent(QFrame* self, QCloseEvent* event);
void QFrame_ContextMenuEvent(QFrame* self, QContextMenuEvent* event);
void QFrame_OnContextMenuEvent(QFrame* self, intptr_t slot);
void QFrame_SuperContextMenuEvent(QFrame* self, QContextMenuEvent* event);
void QFrame_TabletEvent(QFrame* self, QTabletEvent* event);
void QFrame_OnTabletEvent(QFrame* self, intptr_t slot);
void QFrame_SuperTabletEvent(QFrame* self, QTabletEvent* event);
void QFrame_ActionEvent(QFrame* self, QActionEvent* event);
void QFrame_OnActionEvent(QFrame* self, intptr_t slot);
void QFrame_SuperActionEvent(QFrame* self, QActionEvent* event);
void QFrame_DragEnterEvent(QFrame* self, QDragEnterEvent* event);
void QFrame_OnDragEnterEvent(QFrame* self, intptr_t slot);
void QFrame_SuperDragEnterEvent(QFrame* self, QDragEnterEvent* event);
void QFrame_DragMoveEvent(QFrame* self, QDragMoveEvent* event);
void QFrame_OnDragMoveEvent(QFrame* self, intptr_t slot);
void QFrame_SuperDragMoveEvent(QFrame* self, QDragMoveEvent* event);
void QFrame_DragLeaveEvent(QFrame* self, QDragLeaveEvent* event);
void QFrame_OnDragLeaveEvent(QFrame* self, intptr_t slot);
void QFrame_SuperDragLeaveEvent(QFrame* self, QDragLeaveEvent* event);
void QFrame_DropEvent(QFrame* self, QDropEvent* event);
void QFrame_OnDropEvent(QFrame* self, intptr_t slot);
void QFrame_SuperDropEvent(QFrame* self, QDropEvent* event);
void QFrame_ShowEvent(QFrame* self, QShowEvent* event);
void QFrame_OnShowEvent(QFrame* self, intptr_t slot);
void QFrame_SuperShowEvent(QFrame* self, QShowEvent* event);
void QFrame_HideEvent(QFrame* self, QHideEvent* event);
void QFrame_OnHideEvent(QFrame* self, intptr_t slot);
void QFrame_SuperHideEvent(QFrame* self, QHideEvent* event);
bool QFrame_NativeEvent(QFrame* self, const libqt_string eventType, void* message, intptr_t* result);
void QFrame_OnNativeEvent(QFrame* self, intptr_t slot);
bool QFrame_SuperNativeEvent(QFrame* self, const libqt_string eventType, void* message, intptr_t* result);
int QFrame_Metric(const QFrame* self, int param1);
void QFrame_OnMetric(const QFrame* self, intptr_t slot);
int QFrame_SuperMetric(const QFrame* self, int param1);
void QFrame_InitPainter(const QFrame* self, QPainter* painter);
void QFrame_OnInitPainter(const QFrame* self, intptr_t slot);
void QFrame_SuperInitPainter(const QFrame* self, QPainter* painter);
QPaintDevice* QFrame_Redirected(const QFrame* self, QPoint* offset);
void QFrame_OnRedirected(const QFrame* self, intptr_t slot);
QPaintDevice* QFrame_SuperRedirected(const QFrame* self, QPoint* offset);
QPainter* QFrame_SharedPainter(const QFrame* self);
void QFrame_OnSharedPainter(const QFrame* self, intptr_t slot);
QPainter* QFrame_SuperSharedPainter(const QFrame* self);
void QFrame_InputMethodEvent(QFrame* self, QInputMethodEvent* param1);
void QFrame_OnInputMethodEvent(QFrame* self, intptr_t slot);
void QFrame_SuperInputMethodEvent(QFrame* self, QInputMethodEvent* param1);
QVariant* QFrame_InputMethodQuery(const QFrame* self, int param1);
void QFrame_OnInputMethodQuery(const QFrame* self, intptr_t slot);
QVariant* QFrame_SuperInputMethodQuery(const QFrame* self, int param1);
bool QFrame_FocusNextPrevChild(QFrame* self, bool next);
void QFrame_OnFocusNextPrevChild(QFrame* self, intptr_t slot);
bool QFrame_SuperFocusNextPrevChild(QFrame* self, bool next);
bool QFrame_EventFilter(QFrame* self, QObject* watched, QEvent* event);
void QFrame_OnEventFilter(QFrame* self, intptr_t slot);
bool QFrame_SuperEventFilter(QFrame* self, QObject* watched, QEvent* event);
void QFrame_TimerEvent(QFrame* self, QTimerEvent* event);
void QFrame_OnTimerEvent(QFrame* self, intptr_t slot);
void QFrame_SuperTimerEvent(QFrame* self, QTimerEvent* event);
void QFrame_ChildEvent(QFrame* self, QChildEvent* event);
void QFrame_OnChildEvent(QFrame* self, intptr_t slot);
void QFrame_SuperChildEvent(QFrame* self, QChildEvent* event);
void QFrame_CustomEvent(QFrame* self, QEvent* event);
void QFrame_OnCustomEvent(QFrame* self, intptr_t slot);
void QFrame_SuperCustomEvent(QFrame* self, QEvent* event);
void QFrame_ConnectNotify(QFrame* self, const QMetaMethod* signal);
void QFrame_OnConnectNotify(QFrame* self, intptr_t slot);
void QFrame_SuperConnectNotify(QFrame* self, const QMetaMethod* signal);
void QFrame_DisconnectNotify(QFrame* self, const QMetaMethod* signal);
void QFrame_OnDisconnectNotify(QFrame* self, intptr_t slot);
void QFrame_SuperDisconnectNotify(QFrame* self, const QMetaMethod* signal);
void QFrame_DrawFrame(QFrame* self, QPainter* param1);
void QFrame_OnDrawFrame(QFrame* self, intptr_t slot);
void QFrame_SuperDrawFrame(QFrame* self, QPainter* param1);
void QFrame_UpdateMicroFocus(QFrame* self);
void QFrame_OnUpdateMicroFocus(QFrame* self, intptr_t slot);
void QFrame_SuperUpdateMicroFocus(QFrame* self);
void QFrame_Create(QFrame* self);
void QFrame_OnCreate(QFrame* self, intptr_t slot);
void QFrame_SuperCreate(QFrame* self);
void QFrame_Destroy(QFrame* self);
void QFrame_OnDestroy(QFrame* self, intptr_t slot);
void QFrame_SuperDestroy(QFrame* self);
bool QFrame_FocusNextChild(QFrame* self);
void QFrame_OnFocusNextChild(QFrame* self, intptr_t slot);
bool QFrame_SuperFocusNextChild(QFrame* self);
bool QFrame_FocusPreviousChild(QFrame* self);
void QFrame_OnFocusPreviousChild(QFrame* self, intptr_t slot);
bool QFrame_SuperFocusPreviousChild(QFrame* self);
QObject* QFrame_Sender(const QFrame* self);
void QFrame_OnSender(const QFrame* self, intptr_t slot);
QObject* QFrame_SuperSender(const QFrame* self);
int QFrame_SenderSignalIndex(const QFrame* self);
void QFrame_OnSenderSignalIndex(const QFrame* self, intptr_t slot);
int QFrame_SuperSenderSignalIndex(const QFrame* self);
int QFrame_Receivers(const QFrame* self, const char* signal);
void QFrame_OnReceivers(const QFrame* self, intptr_t slot);
int QFrame_SuperReceivers(const QFrame* self, const char* signal);
bool QFrame_IsSignalConnected(const QFrame* self, const QMetaMethod* signal);
void QFrame_OnIsSignalConnected(const QFrame* self, intptr_t slot);
bool QFrame_SuperIsSignalConnected(const QFrame* self, const QMetaMethod* signal);
void QFrame_Delete(QFrame* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif